2009-03-02  Badlop  <badlop@process-one.net>

	* src/ejabberd_xmlrpc.erl: Replace the listener option 'access'
	with the much more powerful 'access_commands', that allows to
	grant selective permission to execute commands with certain
	arguments
	* README.txt: Likewise

2009-02-24  Badlop  <badlop@process-one.net>

	* src/ejabberd_xmlrpc.erl: Update to work with recent ejabberd
	trunk SVN (thanks to Artem Yurov)
	* README.txt: Likewise

2008-10-21  Badlop  <badlop@process-one.net>

	* README.txt: Updated PHP example

2008-10-12  Badlop  <badlop@process-one.net>

	* src/ejabberd_xmlrpc.erl: Major rewrite of mod_xmlrpc to be an
	ejabberd independent listener, and to be a frontend of ejabberd
	commands (EJAB-694)

2008-08-31  Badlop  <badlop@process-one.net>

	* README.txt: Added Java example client and fixed the PHP
	example (thanks to Calder)

2008-07-24  Badlop  <badlop@process-one.net>

	* src/mod_xmlrpc.erl: Fixed typo in get_roster

2008-07-08  Badlop  <badlop@process-one.net>

	* src/mod_xmlrpc.erl: Detect if mod_roster or mod_roster_odbc is
	enabled. New call send_message (thanks to Darren Ferguson)
	* README.txt: Likewise

2008-05-20  Badlop  <badlop@process-one.net>

	* src/mod_xmlrpc.erl: New call get_roster; works only with
	mod_roster_odbc
	* README.txt: Likewise

2008-05-19  Badlop  <badlop@process-one.net>

	* src/mod_xmlrpc.erl: New function check_account (thanks to
	Zbyszek Żółkiewski)
	* README.txt: Likewise

2008-05-18  Badlop  <badlop@process-one.net>
	
	* README.txt: Added example client in PHP (thanks to Zbyszek
	Żółkiewski)
	
	* src/mod_xmlrpc.erl: Convert from DOS to Unix line format
	* README.txt: Likewise
	* ChangeLog: Likewise

2008-05-16  Badlop  <badlop@process-one.net>

	* src/mod_xmlrpc.erl: New calls muc_room_change_option and
	muc_room_set_affiliation. Improved calls add_rosteritem and
	delete_rosteritem: they push the changed roster item to connected
	resources (thanks to Darren Ferguson). New call check_password.